Improve Google verification file serving
- Add explicit rewrite rule for verification file to ensure it's served
- Change Content-Type to text/plain (more appropriate for verification)
- Add no-cache headers to prevent stale content
- Ensure file is excluded from SPA catch-all rewrite

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
   "rewrites": [
     {
+      "source": "/googlea841887287663150.html",
+      "destination": "/googlea841887287663150.html"
+    },
+    {
       "source": "/((?!sitemap\\.xml|robots\\.txt|googlea841887287663150\\.html|.*\\.(xml|txt|html|ico|png|jpg|jpeg|gif|svg|webp|woff|woff2|ttf|eot|css|js|json|map)).*)",
       "destination": "/index.html"
     }
@@ -33,7 +37,11 @@
       "headers": [
         {
           "key": "Content-Type",
-          "value": "text/html; charset=utf-8"
+          "value": "text/plain; charset=utf-8"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
         }
       ]
     }
