Fix sitemap.xml serving and update lastmod dates
- Add explicit rewrite rules for sitemap.xml and robots.txt to ensure they're served
- Update all lastmod dates to 2026-01-21 for better freshness
- Ensure sitemap is accessible for Google Search Console

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,14 @@
 {
   "rewrites": [
     {
+      "source": "/sitemap.xml",
+      "destination": "/sitemap.xml"
+    },
+    {
+      "source": "/robots.txt",
+      "destination": "/robots.txt"
+    },
+    {
       "source": "/googlea841887287663150.html",
       "destination": "/googlea841887287663150.html"
     },
