--- a/vercel.json
+++ b/vercel.json
@@ -28,16 +28,7 @@
       ]
     },
     {
-      "source": "/assets/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    },
-    {
-      "source": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|webp|woff|woff2|ttf|eot|ico))",
+      "source": "/assets/:path*",
       "headers": [
         {
           "key": "Cache-Control",
